statum-macros/tests/ui/invalid_validators_no_methods.stderr
error: Error: `#[validators(TaskMachine)]` on `impl DbRow` must define at least one validator method.
       Expected one method per `TaskState` variant: is_draft.
  --> tests/ui/invalid_validators_no_methods.rs:22:1
   |
22 | #[validators(TaskMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_validators_no_methods.rs:23:14
   |
23 | impl DbRow {}
   |              ^ consider adding a `main` function to `$DIR/tests/ui/invalid_validators_no_methods.rs`
